worker.deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: worker-deployment
  namespace: default
  labels:
    app: worker-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-app
  template:
    metadata:
      labels:
        app: worker-app
    spec:
      restartPolicy: Always
      containers:
        - name: worker
          image: epitechcontent/t-dop-600-worker:k8s
          resources:
            limits:
              memory: "256Mi"
