postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: postgres-service
spec:
  type: ClusterIP
  selector:
    bdd: postgres
  ports:
  - name: http
    protocol: TCP
    targetPort: 5432
    port: 5432
