redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    bdd: redis
  ports:
  - name: http
    protocol: TCP
    targetPort: 6379
    port: 6379
