result.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: result
spec:
  type: ClusterIP
  selector:
    app: result-app
  ports:
  - name: http
    protocol: TCP
    targetPort: 80
    port: 80
