poll.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: poll-ingress
  namespace: default
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: poll.dop.io
    http:
      paths:
      - path: /
        backend:
          serviceName: poll
          servicePort: 80
